--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>订阅转换</title>
         <meta name="keywords" content="CLOUDFLARE,CLOUDFLARE在线订阅转换,Clash在线订阅转换,在线订阅转换" />
         <meta name="description" content="CLOUDFLARE,CLOUDFLARE在线订阅转换,Clash在线订阅转换,在线订阅转换" />
-        <link href="https://github.sayuri.cf/https://raw.githubusercontent.com/godlikeanyone/subconverter-cloudflare/main/index.min.css" rel="stylesheet" />
+        <link href="https://raw.githubusercontent.com/godlikeanyone/subconverter-cloudflare/main/index.min.css" rel="stylesheet" />
     </head>
 
     <style>
