--- a/index.html
+++ b/index.html
@@ -51642,7 +51642,7 @@
                                         'https://github.com/ACL4SSR/ACL4SSR'),
                                     r = 'https://github.sayuri.cf/https://raw.githubusercontent.com/godlikeanyone/Rules/master/subconvert.ini',
                                     a = 'https://github.com/tindy2013/subconverter/releases',
-                                    s = 'https://sub.id9.cc/sub?',
+                                    s = 'https://sub.d1.mk/sub?',
                                     c = 'clash&new_name=true',
                                     u = 'https://suo.yt/short',
                                     f = 'https://api.wcc.best/config/upload',
@@ -51675,7 +51675,7 @@
                                                             Surge2: 'surge&ver=2'
                                                         },
                                                         customBackend: {
-                                                            'sub.id9.cc(品云提供-稳定)': 'https://sub.id9.cc/sub?',
+                                                            'sub.d1.mk': 'https://sub.d1.mk/sub?',
                                                             'sub.xeton.dev(subconverter作者提供-稳定)': 'https://sub.xeton.dev/sub?',
                                                             'api.dler.io(lhie1提供-稳定)': 'https://api.dler.io/sub?',
                                                             'sub.maoxiongnet.com(猫熊提供-稳定)': 'https://sub.maoxiongnet.com/sub?',
@@ -51683,7 +51683,7 @@
                                                         },
                                                         backendOptions: [
                                                             {
-                                                                value: 'https://sub.id9.cc/sub?'
+                                                                value: 'https://sub.d1.mk/sub?'
                                                             },
                                                             {
                                                                 value: 'https://sub.xeton.dev/sub?'
